--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p class="description">{{ site.description | default: site.github.project_tagline }}</p>
-
-        <button class="sale" type="button">Buy book</button>
-        <button class="sale" type="button">Buy shirt</button>
+        <div>
+          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZPcom">BUY BOOK</a></button>
+          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZP">BUY CLUB SHIRT</a></button>
+        </div>
 
       </header>
       <section>
