--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+   <!-- Favicon -->
+    <link rel="icon" href="./../thumbnail.png" type="image/png">
+
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -15,13 +18,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
+        <h1 class="title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" class="logo"/>
         {% endif %}
 
-        <div>
+        <div class="space-above">
           <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZPcom">BUY BOOK</a></button>
           <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZP">BUY CLUB SHIRT</a></button>
         </div>
