--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -104,6 +104,10 @@ img {
   max-width:100%;
 }
 
+.logo {
+  width:270px;
+}
+
 kbd {
   background-color: #fafbfc;
   border: 1px solid #c6cbd1;
@@ -120,10 +124,26 @@ kbd {
 
 header {
   width:270px;
-  float:left;
-  position: static;
-  margin-bottom: 50px;
+  position: fixed;
+  // height: 100%;
+  // height: 100vh;
+  overflow: auto;
+  // float:left;
+  // position: static;
+  padding:  0px  0px 48px 0px;
   -webkit-font-smoothing:subpixel-antialiased;
+}
+
+.title {
+  text-align: center;
+}
+
+.space-below {
+  margin:  0px  0px 36px 0px;
+}
+
+.space-above {
+  margin:  36px  0px 0px 0px;
 }
 
 /* Button-Stil */
@@ -251,10 +271,6 @@ footer {
     -webkit-font-smoothing:subpixel-antialiased;
   }
 
-  /* header {
-    padding-right:320px;
-  } */
-
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
@@ -262,24 +278,11 @@ footer {
     margin:0 0 20px;
   }
 
-  /* header a small {
-    display:inline;
-  } */
-
-  /* header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }*/
 } 
 
 @media print, screen and (max-width: 600px) {
   body {
     word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
   }
 
   header ul, header p.view {
