--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,10 @@
   <body>
     <div class="wrapper">
       <header>
+        {% if site.title %}
         <h1 class="title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+        {% endif %}
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" class="logo"/>
         {% endif %}
