--- a/_layouts/impressum-and-privacy-policy.html
+++ b/_layouts/impressum-and-privacy-policy.html
@@ -14,6 +14,21 @@
   </head>
   <body>
     <div class="wrapper">
+      <header>
+        {% if site.title %}
+        <h1 class="title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        {% endif %}
+
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" class="logo"/>
+        {% endif %}
+
+        <div class="space-above">
+          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZPcom">BUY BOOK</a></button>
+          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZP">BUY CLUB SHIRT</a></button>
+        </div>
+
+      </header>
       <section>
 
       {{ content }}
