--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <header>
         {% if site.title %}
-        <h1 class="title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 class="title"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
         {% endif %}
 
         {% if site.logo %}
