--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,15 +2,15 @@
 @import "rouge-github";
 
 body {
-  background-color: #fff;
+  background-color: #d4aa00bd;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  color:#fff;
   font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#fff;
   margin:0 0 20px;
 }
 
@@ -35,12 +35,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#267CB9;
+  color:#777;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#069;
+  color:#8f8f8f;
   font-weight: bold;
 }
 
@@ -57,7 +57,11 @@ a:hover small {
 
 .wrapper {
   width:860px;
-  margin:0 auto;
+  margin: 0 auto;
+}
+
+.text {
+  font-size:18px;
 }
 
 blockquote {
@@ -110,6 +114,12 @@ img {
   border-radius: 4px;
 }
 
+.funny-face {
+  width:133px;
+  border: 2px solid #bf9900;
+  border-radius: 4px;
+}
+
 kbd {
   background-color: #fafbfc;
   border: 1px solid #c6cbd1;
@@ -126,6 +136,7 @@ kbd {
 
 header {
   width:270px;
+  padding: 40px 0 0 0;
   position: fixed;
   overflow: auto;
   -webkit-font-smoothing:subpixel-antialiased;
@@ -167,7 +178,7 @@ button.sale {
 
 /* Hover-Effekt */
 button.sale:hover {
-  background-color: #d4aa00bd;
+  background-color: #f8c701bd;
 }
 
 ul.downloads {
@@ -234,6 +245,7 @@ strong {
 section {
   width:500px;
   float:right;
+  margin: 40px 0;
 }
 
 small {
@@ -242,8 +254,8 @@ small {
 
 hr {
   border:0;
-  background:#e5e5e5;
-  height:1px;
+  background:#bf9900;
+  height:2px;
   margin:0 0 20px;
 }
 
@@ -267,13 +279,13 @@ footer {
     float:none;
     position:static;
     width:auto;
-    padding:  0px  0px 60px 0px;
     -webkit-font-smoothing:subpixel-antialiased;
   }
 
 } 
 
 @media print, screen and (max-width: 600px) {
+
   body {
     word-wrap:break-word;
   }
@@ -308,9 +320,10 @@ footer {
 // --------------------------------------
 
 /* Container style */
-.container-author {
-  font-family: Arial, sans-serif;
-  margin: 0;
+.container-person {
+  border: 2px solid #fff;
+  border-radius: 4px;
+  margin: 40px 0px;
   padding: 20px;
   display: flex;
   align-items: center;
@@ -333,14 +346,28 @@ footer {
 }
 
 /* Text container style */
-.text-container {
+.big-container {
+  flex-grow: 2;
+  justify-content: center;
+}
+
+.small-container {
   flex-grow: 1;
   justify-content: center;
+  display: flex; 
+  align-items: center; 
 }
 
 /* Name and job description style */
 .name {
-  font-size: 18px;
+  font-size: 28px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+
+.pre-description {
+  font-size:20px;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -353,23 +380,25 @@ footer {
 }
 
 /* Social icons style */
-.social-icons {
+.social-icons-container {
   display: flex;
   justify-content: center;
+  margin: 20px 0;
 }
 
-.social-icons a {
+.social-icons-container a {
   display: inline-block;
   margin: 0px 3px;
   text-decoration: none;
 }
 
-.social-icons img {
+.social-icons-container img {
   width: 20px; /* Adjust the size of social icons */
   height: 20px;
   opacity: 0.7;
 }
 
-.social-icons a:hover img {
+.social-icons-container a:hover img {
   transform: scale(1.2); /* Adjust the scale factor for the desired hover effect */
+  color: #fff;
 }
