--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" class="logo"/>
         {% endif %}
 
-        <div class="space-above social-icons-button">
-          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZPcom">BUY BOOK</a></button>
-          <button class="sale" type="button" target=”_blank”><a href="https://www.amazon.de/Why-does-Neural-Network-learn-ebook/dp/B09QRGWWZP">BUY CLUB SHIRT</a></button>
-          <button class="sale" type="button" target=”_blank”><a href="https://mybinder.org/v2/gh/schutera/DeepDive/HEAD?filepath=%2FDeepDive.ipynb">OPEN JUPYTER NB</a></button>
+        <div class="space-above">
+          <button class="button-1 sale" type="button" target=”_blank”><a href="mailto:hellomyfriend@mailbox.org?subject=Hi there" target="_blank">SAY HI</a></button>
+          <button class="button-2 sale" type="button" target=”_blank”><a href="" target="_blank">SEE WEB PROJECTS</a></button>
+          <button class="button-3 sale" type="button" target=”_blank”><a href="" target="_blank">SEE OTHER PROJECTS</a></button>
         </div>
 
       </header>
