--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
         {% endif %}
 
         <div class="space-above">
-          <button class="button-1 sale" type="button" target=”_blank”><a href="mailto:hellomyfriend@mailbox.org?subject=Hi there" target="_blank">SAY HI</a></button>
-          <button class="button-2 sale" type="button" target=”_blank”><a href="./web-projects.html" target="#">SEE WEB PROJECTS</a></button>
-          <button class="button-3 sale" type="button" target=”_blank”><a href="./other-projects.html" target="#"">SEE OTHER PROJECTS</a></button>
+          <button class="button-1 sale" type="button"><a href="mailto:hellomyfriend@mailbox.org?subject=Hi there" target="_blank">SAY HI</a></button>
+          <button class="button-2 sale" type="button"><a href="./web-projects.html" target="#">SEE WEB PROJECTS</a></button>
+          <button class="button-3 sale" type="button"><a href="./other-projects.html" target="#"">SEE OTHER PROJECTS</a></button>
         </div>
         
       </header>
