--- a/_layouts/subpages.html
+++ b/_layouts/subpages.html
@@ -20,9 +20,8 @@
         {% endif %}      
       </header>
       <section>
-
-      {{ content }}
-
+        <button class="sale" type="button" target="#"><a href="./">GO BACK</a></button>
+        {{ content }}
       </section>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
