--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 
         <div class="space-above">
           <button class="button-1 sale" type="button"><a href="mailto:hellomyfriend@mailbox.org?subject=Hi there" target="_blank">SAY HI</a></button>
-          <button class="button-2 sale" type="button"><a href="./web-projects.html" target="#">SEE WEB PROJECTS</a></button>
-          <button class="button-3 sale" type="button"><a href="./other-projects.html" target="#"">SEE OTHER PROJECTS</a></button>
+          <button class="button-2 sale" type="button" target="#"><a href="./web-projects.html">SEE WEB PROJECTS</a></button>
+          <button class="button-3 sale" type="button" target="#"><a href="./other-projects.html">SEE OTHER PROJECTS</a></button>
         </div>
         
       </header>
